--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>PACMAN</title>
 </head>
 <body>
-    
+    <section>
+    <h1>PACMAN</h1>
+    <div id="grille">
+      
+    </div>
+    </section>
+    <script src="js/script.js"></script>
 </body>
 </html>
