PacMAN + Fantômes + Grid OK

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <section>
     <h1>PACMAN</h1>
+    <div id="score">Votre score : <span id="score2">0</span></div>
     <div id="grille">
-      
+    <div class="perdu"><h2>PERDU</h2></div>
     </div>
+
     </section>
     <script src="js/script.js"></script>
 </body>
