--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </div>
 
     </section>
+    <script src="js/CPacMan.js"></script>
     <script src="js/script.js"></script>
+    
 </body>
 </html>
