PacMan + Fantômes refactorisés

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     </section>
     <script src="js/CPacMan.js"></script>
+    <script src="js/CFantome.js"></script>
     <script src="js/script.js"></script>
     
 </body>
