--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </section>
     <script src="js/CPacMan.js"></script>
     <script src="js/CFantome.js"></script>
+    <script src="js/CGrille.js"></script>
     <script src="js/script.js"></script>
     
 </body>
